Add style to lyrics

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -51,6 +51,10 @@
     min-width: 100%; min-height: 100%;
     width: auto; height: auto; z-index: -100;
   }
+  .lyrics {
+    text-align: center;
+    font-size: 5rem;
+  }
   .no-lyrics {
     position: absolute;
     bottom: 0px;
